--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+	"$schema": "./ts/node_modules/@biomejs/biome/configuration_schema.json",
 	"formatter": {
 		"indentWidth": 4
 	},
